--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <!-- Hero Section -->
     <section class="hero">
+        <div class="hero-image">
+            <img src="images/hero.png" alt="Hero Image">
+        </div>
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Owner's Showcase</h1>
