--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Owner's Showcase</h1>
+                <h1 class="hero-title">Owner's Gallery</h1>
                 <p class="hero-description">
                     <b>When you bring your experience and passion for the towing industry to Zip's, we can build something incredible.</b><br> Using the latest technology, custom-built features and endless options—your truck will be one of a kind. Some of the latest and greatest are displayed here in our Owner's Gallery. We would love you to share final pictures of your Zip's-built truck so that we can show them off to the world.
                 </p>
