--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
                 <div class="modal-details">
                     <div class="vehicle-info">
                         <h3 id="modalOwner"></h3>
+                        <button class="share-btn" id="shareBtn">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 5.5C13.1046 5.5 14 4.60457 14 3.5C14 2.39543 13.1046 1.5 12 1.5C10.8954 1.5 10 2.39543 10 3.5C10 3.57524 10.0074 3.64852 10.0216 3.71951L5.95116 6.15732C5.59282 5.76056 5.06013 5.5 4.5 5.5C3.39543 5.5 2.5 6.39543 2.5 7.5C2.5 8.60457 3.39543 9.5 4.5 9.5C5.06013 9.5 5.59282 9.23944 5.95116 8.84268L10.0216 11.2805C10.0074 11.3515 10 11.4248 10 11.5C10 12.6046 10.8954 13.5 12 13.5C13.1046 13.5 14 12.6046 14 11.5C14 10.3954 13.1046 9.5 12 9.5C11.4399 9.5 10.9072 9.76056 10.5488 10.1573L6.47842 7.71951C6.49258 7.64852 6.5 7.57524 6.5 7.5C6.5 7.42476 6.49258 7.35148 6.47842 7.28049L10.5488 4.84268C10.9072 5.23944 11.4399 5.5 12 5.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            Share
+                        </button>
                         <div class="detail-row">
                             <span class="label">Truck:</span>
                             <span id="modalTruck"></span>
@@ -145,7 +151,7 @@
                         </div>
                         <div class="contact-info">
                             <p>If you have any questions or would like to build a truck like this sold unit, contact us!</p>
-                            <a href="tel:800-222-6047" class="phone-link"> 800-222-6047</a>
+                            <a href="tel:800-222-6047" class="phone-link">Call us: 800-222-6047</a>
                         </div>
                     </div>
                 </div>
